Quest feature and Discount feature
